# Wallrus

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  readme.md
.github/workflows/: ci.yml  release.yml
packaging/aur/: PKGBUILD
packaging/homebrew/: wallrus.rb
src/: cli.rs  config.rs  errors.rs  main.rs  unsplash.rs  utils.rs  wallpaper.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/config/: mod.rs
src/engine/: common.rs  linux.rs  macos.rs  mod.rs  wayland.rs  windows.rs
src/engine/generators/: gradient.rs  mod.rs  random_plot.rs  random_walk.rs
src/providers/: mod.rs  unsplash.rs
src/utils/: file.rs  mod.rs  string.rs
systemd/: README.md  wallrus-slideshow.service
