[package]
name = "wallrus"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
dotenv = "0.15.0"
image = "0.23"
chrono = "0.4"
plotters = "0.3"
rand = "0.8"
indicatif = {version = "*"}
futures-util = "0.3"
clap = {version = "4.5", features = ["derive"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dev-dependencies]
tempfile = "3.13"