[package]
name = "wallrus"
version = "0.3.0"
edition = "2021"
authors = ["pi22by7 <talk@pi22by7.me>"]
license = "MIT"
description = "Cross-platform wallpaper manager with native Wayland protocol support and multi-DE compatibility"
homepage = "https://github.com/pi22by7/wallrus"
repository = "https://github.com/pi22by7/wallrus"
readme = "README.md"
keywords = ["wallpaper", "hyprland", "desktop", "wayland", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
dotenv = "0.15.0"
image = "0.23"
chrono = "0.4"
plotters = "0.3"
rand = "0.8"
indicatif = {version = "*"}
futures-util = "0.3"
clap = {version = "4.5", features = ["derive"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
smithay-client-toolkit = { version = "0.19", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.0", optional = true }

[features]
default = ["wayland"]
wayland = ["smithay-client-toolkit", "wayland-client", "wayland-protocols-wlr", "memmap2", "tempfile"]


[dev-dependencies]
tempfile = "3.13"